Feature: now all messages in live room will be stored in logging file

--- a/config_template.json
+++ b/config_template.json
@@ -9,6 +9,7 @@
     "music": {
         "ip": "localhost",
         "port": 4001,
+        "cookie": "cookie of NeteaseCloudMusicAPI",
         "default": [
             "26060065",
             "29771432"
